# src/config/swagger.yaml
@@ -6,9 +6,9 @@ info:
 
 servers:
   - url: https://todo-backend-app.up.railway.app/api
-    description: production server
+    description: Production server
   - url: http://localhost:3000/api
-    description: local server
+    description: Local server
 
 paths:
   /todoList:
@@ -24,22 +24,105 @@ paths:
                 type: array
                 items:
                   type: string
-  /send:
+
+  /sendTodo:
     post:
       tags:
         - Todo
       requestBody:
-        description: add todo
+        description: Add todo
         required: true
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                todo:
-                  type: string
-                status:
-                  type: boolean
+              $ref: "#/components/schemas/Todo"
       responses:
         "200":
-          description: ToDo add
+          description: ToDo added successfully
+
+  /updateTodo/{id}:
+    put:
+      tags:
+        - update todoes
+      summary: Update the status of a todo item
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+          description: The ID of the todo item to update
+      responses:
+        "200":
+          description: Successful update
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Success message
+                  todo:
+                    $ref: "#/components/schemas/Todo"
+        "404":
+          description: Todo not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Error message
+
+  /deleteTodo/{id}:
+    delete:
+      tags:
+        - todo
+      summary: Deletes a todo item
+      operationId: deleteTodo
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Todo deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+
+  /deletedInactive:
+    delete:
+      tags:
+        - delete todoes
+      summary: Delete todos with status false
+      description: Deletes all todos with status set to false.
+      responses:
+        '201':
+          description: Todo deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: Todo deleted successfully
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    description: Error message
